src/test/ui/nll/user-annotations/inherent-associated-constants.stderr
error: lifetime may not be long enough
  --> $DIR/inherent-associated-constants.rs:10:5
   |
LL | fn non_wf_associated_const<'a>(x: i32) {
   |                            -- lifetime `'a` defined here
LL |     A::<'a>::IC;
   |     ^^^^^^^^^^^ requires that `'a` must outlive `'static`
   |
   = help: consider replacing `'a` with `'static`

error: aborting due to previous error

